--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,6 +23,7 @@ h1 {
     display: flex;
     width: 300px;
 }
+
 .busca #searchInput {
     flex: 1;
     padding: 10px;
@@ -31,6 +32,7 @@ h1 {
     border-radius: 5px;
     border: 0;
 }
+
 .busca button {
     padding: 10px;
     font-size: 15px;
@@ -41,6 +43,7 @@ h1 {
     margin-left: 10px;
     cursor: pointer;
 }
+
 .busca button:hover {
     background-color: #444;
 }
@@ -66,45 +69,45 @@ h1 {
 .info {
     display: flex;
     width: 100%;
+    margin-bottom: 10px;
 }
-.info .temp {
-    flex: 1;
-    text-align: center;
-}
+
+.info .temp,
 .info .vento {
     flex: 1;
     text-align: center;
 }
+
 .tempTitulo,
 .ventoTitulo {
     color: #777;
     font-size: 16px;
-    margin-bottom: 5px;
+    margin-bottom: 18px;
 }
+
 .tempInfo,
 .ventoInfo {
     color: #FFF;
     font-size: 30px;
     font-weight: bold;
 }
-.tempInfo sup {
-    font-size: 15px;
-    font-weight: normal;
-}
+
+.tempInfo sup,
 .ventoInfo span {
     font-size: 15px;
     font-weight: normal;
 }
+
 .ventoArea {
     width: 50px;
     height: 50px;
     border: 1px solid #FFF;
     border-radius: 50%;
     margin: auto;
-    margin-top: 20px;
     padding-left: 25px;
     padding-top: 25px;
 }
+
 .ventoPonto {
     width: 15px;
     height: 1px;
